2003-06-04  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.7.cvs.2

	* NEWS: update.

	* dsh.ja.1: fix wording.

	* Makefile.am (install-data-local): support @sysconfdir@
	manual pages are installed properly, including localized ones.

	* dsh.conf.ja.5: use @sysconfdir@

	* dsh.conf.5: ditto

	* Makefile.am (install-data-local): try and make a i18n build script.

	* dsh.ja.1: use @sysconfdir@ instead of hard-coding.

	* dsh.1: use @sysconfdir@ instead of hard-coding.

2003-05-29  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.7.cvs.1
	* ja pages were not included in the distribution, include as
	  EXTRA_DIST
	
	* configure.ac: 0.23.7

	* NEWS: created file, added info on this release of dsh.

	* Makefile.am (noinst_dist_man_MANS): Japanese translation are 
	noinst targets for now, since automake doesn't install them to 
	proper places.

	* dsh.conf.ja.5: created new file.

	* Makefile.am (dist_man_MANS): add files.

	* dsh.conf.5: created new file.

	* dsh.ja.1: create japanese translation.

	* dsh.1: update docs, mention remsh.

2003-01-24  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.6

	* Makefile.am (TESTS): add the test

	* tests/param-b-0.sh: new test to check buffer size param functionality

	* parameter.c (parse_options): check that buffersize is not 0 or 
	any silly value.

2002-11-27  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.5

2002-11-12  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.4.cvs.3

	* dsh.1: update documentation to include -i.

2002-10-22  Junichi Uekawa  <dancer@debian.org>

	* TODO: update TODO file with beautification.

	* configure.ac: 0.23.4.cvs.2

	* dsh.1: update manual page

	* configure.ac: 0.23.4.cvs.1

	* Makefile.am (TESTS): update
	(EXTRA_DIST): add test.space.file

	* tests/param-f-with-space.sh: test with reading file with space
	to make sure that:
	#165746: dsh.updatelist generates invalid /etc/dsh/machines.list
	is not happening.
